# OS-IA-Pipegrobid

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README.md  codemeta.json  docker-compose.yml  mkdocs.yml  pyproject.toml  readthedocs.yml  requirements.txt
.github/workflows/: python-package.yml  run-tests.yml
Assigment_1/: README.md  main.py
Assigment_1/functions/: __init__.py  dw_stopwords.py  gen_pgns.py  gen_txt.py  grobid_req.py  process_xml.py
Assigment_1/generated_files/: links_per_paper.txt
Assigment_1/xmls/: paper1.tei.xml  paper10.tei.xml  paper2.tei.xml  paper3.tei.xml  paper4.tei.xml  paper5.tei.xml  paper6.tei.xml  paper7.tei.xml  paper8.tei.xml  paper9.tei.xml
assigment_2/step_2/ner_evaluation/: .env.example  .gitignore  README.md  pyproject.toml
assigment_2/step_2/ner_evaluation/docs/: declaracion_uso_ia.md
assigment_2/step_2/ner_evaluation/predictions/: groq.json  hf_inference.json  jean_baptiste.json  kalawinka.json
assigment_2/step_2/ner_evaluation/reports/: evaluation_report.json  evaluation_report.md  ner_evaluation_report.md
assigment_2/step_2/ner_evaluation/scripts/: 01_predict_jean_baptiste.py  02_predict_kalawinka.py  03_predict_groq.py  04_predict_hf_inference.py  05_evaluate.py  prompt_ner.py  utils.py
assigment_2/step_2/ner_extraction/: README.md  pyproject.toml
assigment_2/step_2/ner_extraction/scripts/: core.py  llama_extraction.py
corpus/: ANNOTATION_GUIDELINES.md  GUIDELINES.md  README.md  gold_standard.json
docs/: INSTALATION.md  Index.md  index.md
generated_files/: links_per_paper.txt
outputs/extrated_acknowledgements_parsed_xmls/: paper_01.json  paper_02.json  paper_03.json  paper_04.json  paper_05.json  paper_06.json  paper_07.json  paper_08.json  paper_09.json  paper_10.json  paper_11.json  paper_12.json  paper_13.json  paper_14.json  paper_15.json  paper_16.json  paper_17.json  paper_18.json  (+12 more)
pipegrobid-rocrate/: README.md  ci-test.yml  ro-crate-metadata.json
xmls/: paper1.tei.xml  paper10.tei.xml  paper2.tei.xml  paper3.tei.xml  paper4.tei.xml  paper5.tei.xml  paper6.tei.xml  paper7.tei.xml  paper8.tei.xml  paper9.tei.xml
(+127 files in other folders)
