[project]
name = "pipegrobid"
version = "1.3.7"
description = "Data Extraction using GROBID"
authors = [
    {name = "SergioZSZ",email = "s.zaballosh@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "natsort (>=8.4.0,<9.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "wordcloud (>=1.9.6,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[tool.poetry]
packages = [{ include = "pipegrobid", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
pipegrobid = "pipegrobid.__main__:main"
dw-stopwords = "pipegrobid.flow.auxiliar.dw_stopwords:dw_stopwords"
