[project]
name = "ner-extraction"
version = "0.1.0"
description = ""
authors = [
    {name = "G4 OpenScience"}
]
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "groq (>=1.2.0,<2.0.0)",
    "nameparser (>=1.1.3,<2.0.0)",
    "rapidfuzz (>=3.14.5,<4.0.0)",
    "unidecode (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
